crates/oxc_react_compiler/tests/snapshots/valid-new-date-selected-set-result.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-selected-set-result.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component(t0) {
	const $ = _c(2);
	const { cond } = t0;
	let t1;
	if ($[0] !== cond) {
		const a = new Set();
		const b = new Set();
		const target = cond ? a : b;
		t1 = new Date(...target.add(0));
		$[0] = cond;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
