crates/oxc_react_compiler/tests/snapshots/valid-new-date-slice-restored.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-slice-restored.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component() {
	const $ = _c(2);
	let args;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		args = [0];
		args.slice = _temp;
		delete args.slice;
		$[0] = args;
	} else {
		args = $[0];
	}
	let t0;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = new Date(...args.slice());
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function _temp() {
	return [];
}
